# LangChain-Revision

./: .gitignore  CHEATSHEET.md  OUTLINE.md  README.md  main.py  pyproject.toml  requirements.txt
1)LLMS/: README.md
10)Vector_Stores/: README.md
10Vector_Stores/chromaDB/: code.py
11)Retrievers/: README.md
11)Retrievers/MultiQueryRetriever/: code.py
11)Retrievers/VectorSearchRetriever/: code.py
11)Retrievers/WikipediaRetriever/: code.py
11Retrievers/CCR/: code.py
11Retrievers/MMR/: code.py
12RAG-Pipeline/: README.md  code.py
13Tools/: README.md
13Tools/Built/: code.py
1LLMS/: llm.py
2)Chat_Models/: README.md
2Chat_Models/: chat_model.py  huggingface_chat_model.py
3LocalModels/: README.md  hugging_face.py
4)Embedding_models/: README.md
4Embedding_models/: huggingFace_embeddings.py
5)Structured_outputs/: README.md
5)Structured_outputs/structured_outputs/: ps.py
5)Structured_outputs/unstructured_outputs/: output_parsers1.py
5Structured_outputs/: STRUCTURED_GUIDE.md
5Structured_outputs/structured_outputs/: json_schema.py  pydantic_ex.py  typed_Dict.py
6)Chains/: README.md
6)Chains/sequential_chain/: sequential_chain.py
6Chains/condtional_chain/: conditional_chain.py
6Chains/parallel_chain/: parallel_chain.py
6Chains/simple_chain/: simple_chain.py
7)Runnables/: README.md
7)Runnables/part2/: Runnable_Parallel.py  (+1 more)
8)Document_Loaders/: README.md
9)TextSplitters/: CharacterTextSplitting.py  SemanticTextSplitting.py  TextStructuredSpliting.py
9TextSplitters/: DocumentStructuredtextSplitter.py  README.md  TextStructuredSpliting.py
(+6 files in other folders)
